tests/typeapp_import/typeapp_import.exp
Error ------------------------------------------------------------------------------------------------------ main.js:5:5

Cannot cast `y` to number because string [1] is incompatible with number [2]. [incompatible-type]

   main.js:5:5
   5|     y as number; // error string ~> number
          ^

References:
   main.js:3:19
   3| (x: C<number> | C<string>) => {
                        ^^^^^^ [1]
   main.js:5:10
   5|     y as number; // error string ~> number
               ^^^^^^ [2]



Found 1 error
